# libcudf_parquet_reading

./: CMakeLists.txt  Libcudf_compile.md  README.md  arrow_parquet  build.sh  chunked_parquet_read_API.cpp  chunked_parquet_read_API_3_chunks_submit.nsys-rep  chunked_parquet_read_API_submit.nsys-rep  chunked_parquet_read_self_implementation.cpp  chunked_parquet_read_self_implementation_no_compression_chunk_4.nsys-rep  chunked_parquet_read_self_implementation_no_compression_streams_4.nsys-rep  chunked_parquet_read_self_implementation_no_compression_streams_threads_4.nsys-rep  chunked_parquet_read_self_implementation_no_compression_submit.nsys-rep  chunked_parquet_read_self_implementation_submit.nsys-rep  chunked_parquet_read_self_implementation_submit_chunk_4.nsys-rep  chunked_parquet_read_self_implmentation.cpp  chunked_parquet_read_self_implmentation_multi_streams.cpp  chunked_parquet_read_self_implmentation_multi_streams_multi_threads.cpp  chunked_parquet_read_sub_group.cpp  lib_arrow.cpp  parquet_ramfs.cpp  parquet_ramfs_submit.nsys-rep  parquet_read_baseline.cpp  parquet_read_wo_rmm.cpp  readme.txt
